# mnist

./: Pipfile  cnn.ipynb  main.py  pyproject.toml  simple_nn.ipynb
